<resources>
    <string name="app_name">Quiz App</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="tab_text_1">Login</string>
    <string name="tab_text_2">Sign Up</string>
    <string name="logout">Logout</string>

    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="phone">Phone</string>
    <string name="userType">User Type</string>

    <!--Errors Strings-->
    <string name="completeFormError">Please complete the form.</string>
    <string name="emailInvalidError">Email is not valid.</string>
    <string name="phoneInvalidError">Mobile   number   is   not   valid.</string>
    <string name="userInvalidError">Please   select   user   type.</string>
    <string name="emailAlreadyError">Email   already   exist.</string>
    <string name="invalidCredentials">Email or Password Invalid.</string>
    <string name="wrongPasswordError">Password should contain one special character, one Upper case letter, one Number and minimum 8 character are required.</string>


    <array name="users">
        <item>User Type</item>
        <item>Broker</item>
        <item>Agent</item>
        <item>Dealer</item>
        <item>Private</item>
    </array>

</resources>
